Improved task 1333